--- a/src/app/zip-code-selector/zip-code-selector.component.html
+++ b/src/app/zip-code-selector/zip-code-selector.component.html
@@ -6,23 +6,23 @@
       <button class="btn btn-primary" (click)="AddZipcodeCommand()">Add location</button>
     </div>
     <div >
-        <div class="well flex" *ngFor="let w of weathers; index as zipcode">
+        <div class="well flex" *ngFor="let item of weathers | keyvalue">
             <div>
-              <h3>{{w.name}}</h3>
-              <h4>Current conditions: {{w.weather[0].main}}</h4>
+              <h3>{{item.value.name}}</h3>
+              <h4>Current conditions: {{item.value.weather[0].main}}</h4>
               <h4>Temperatures today:</h4>
               <p>
-                Current {{w.main.temp | temperature : 'F'}}
-                - Max {{w.main.temp_max | temperature : 'F'}}
-                - Min {{w.main.temp_min | temperature : 'F'}}
+                Current {{item.value.main?.temp | temperature : 'F'}}
+                - Max {{item.value.main?.temp_max | temperature : 'F'}}
+                - Min {{item.value.main?.temp_min | temperature : 'F'}}
               </p>
               <p>
-                <a [routerLink]="['forecast', zipcode]">Show 5-day forecast for {{w.name}}</a>
+                <a [routerLink]="['forcast', item.key]">Show 5-day forecast for {{item.value.name}}</a>
               </p>
             </div>
             <div>
-              <span class="close" (click)="RemoveZipcodeCommand(zipcode)">×</span>
-              <img [src]="w.weather[0].main | weatherIcon">
+              <span class="close" (click)="RemoveZipcodeCommand(item.key)">×</span>
+              <img src="{{item.value.weather[0].main | weatherIcon}}">
             </div>
         </div>
     </div>    
