zip selector component

--- a/src/app/zip-code-selector/zip-code-selector.component.html
+++ b/src/app/zip-code-selector/zip-code-selector.component.html
@@ -5,8 +5,8 @@
       <br>
       <button class="btn btn-primary" (click)="AddZipcodeCommand()">Add location</button>
     </div>
-    <div >
-        <div class="well flex" *ngFor="let item of weathers | keyvalue">
+    <div *ngFor="let item of weathers | keyvalue">
+        <div class="well flex">
             <div>
               <h3>{{item.value.name}}</h3>
               <h4>Current conditions: {{item.value.weather[0].main}}</h4>
@@ -17,12 +17,12 @@
                 - Min {{item.value.main?.temp_min | temperature : 'F'}}
               </p>
               <p>
-                <a [routerLink]="['forcast', item.key]">Show 5-day forecast for {{item.value.name}}</a>
+                <a [routerLink]="['forecast', item.key]">Show 5-day forecast for {{item.value.name}}</a>
               </p>
             </div>
             <div>
               <span class="close" (click)="RemoveZipcodeCommand(item.key)">×</span>
-              <img src="{{item.value.weather[0].main | weatherIcon}}">
+              <img [src]="item.value.weather[0].main | weatherIcon">
             </div>
         </div>
     </div>    
