--- a/src/app/zip-code-weather/zip-code-weather.component.html
+++ b/src/app/zip-code-weather/zip-code-weather.component.html
@@ -1,1 +1,17 @@
-<p>zip-code-weather works!</p>
+<div class="container-fluid" *ngIf="forecast">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">5-day forecast for {{forecast.city.name}}</h3>  
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let f of forecast?.list">
+          {{f.dt}}:
+          {{f.weather[0].main}}
+          - Min: {{f.temp.min | temperature : 'F'}}
+          - Max: {{f.temp.max | temperature : 'F'}}
+          <img class="icon" src="{{f.weather[0].main | weatherIcon}}">
+        </li>
+      </ul>
+    </div>
+    <button class="btn btn-success" tabindex="0" id="mainPageBtn" (click)="router.navigate(['forecast'])">&lt; Back to main page</button>
+  </div>
