--- a/src/app/zip-code-selector/zip-code-selector.component.html
+++ b/src/app/zip-code-selector/zip-code-selector.component.html
@@ -4,7 +4,7 @@
       <input class="form-control" placeholder="Zipcode" type="number" name="zipcodeCandidate" [(ngModel)]="zipcodeCandidate"/>
       <br>
       <button class="btn btn-primary" (click)="AddZipcodeCommand()">Add location</button>
-    </div>
+    </div>    
     <div class="w3-row w3-center w3-small" *ngFor="let item of weathers | keyvalue | sortWeatherZipcodes">
         <div class="w3-col l3 m6 s12">
             <div class="float-left">
@@ -12,9 +12,9 @@
               <h4>Current conditions: {{item.value.weather[0].main}}</h4>
               <h4>Temperatures today:</h4>
               <p>
-                Current {{item.value.main?.temp | temperature : 'F'}}
-                - Max {{item.value.main?.temp_max | temperature : 'F'}}
-                - Min {{item.value.main?.temp_min | temperature : 'F'}}
+                Current {{item.value.main.temp | temperature : 'F'}}
+                - Max {{item.value.main.temp_max | temperature : 'F'}}
+                - Min {{item.value.main.temp_min | temperature : 'F'}}
               </p>
               <p>
                 <a [routerLink]="['/forecast', item.key]">Show 5-day forecast for {{item.value.name}}</a>
